Add pagination to the blog main page

--- a/views/projects/index.jade
+++ b/views/projects/index.jade
@@ -22,4 +22,20 @@ article#projects
 					li
 						a(href='https://play.google.com/store/apps/details?id=br.com.guidefreitas')
 							img(src='/img/stores/google_play_normal.png', width='120', height='40')
+
+	div#project.content
+		section
+			div.project-image
+				img(src='/img/projects/quale/quale_home.png')
+			div.project-description
+				h2 
+					a(href='/') Joinville
+
+				p.description Aplicativo com informações turísticas desenvolvido para um concurso da Nokia/Microsoft.
+
+				ul#stores
+					li
+						a(href='http://windowsphone.com/s?appid=6885db7b-33a9-4a48-81c2-be9757bfafd8')
+							img(src='/img/stores/marketplace_normal.png', width='120', height='40')
+
 	
