--- a/views/blog/index.jade
+++ b/views/blog/index.jade
@@ -1,9 +1,8 @@
-article.blog
+article#blog-main-page.blog
 	header
 		!=partial('search_field')
 	
 	
-
 	- if (posts.length == 0)
 		div.content
 			p Nenhum post encontrado
@@ -19,6 +18,24 @@ article.blog
 					!= partial('post_tags', {post : post})
 
 					p!= md.parse(post.body)
+
+	| <script type="text/template" class="template_post">
+	|	<div class="content">
+	| 		<section class="post">
+	| 			<h2> <a href="/teste123"><%- post.title %></a></h2>
+	| 			<p class="meta"><%- post.date %></p>
+	|			<div class="tags-tab">
+	|				<ul id="tags" class="tags">
+	|					<% _.each( post.tags.split(','), function(tag){ %>
+	|						<li><a href="/search?tag=<%= tag %>"><%= tag %></a></li>
+	|					<% }); %>
+	|				</ul>
+	|			</div>
+	|			<p></p>
+	|			<%= post.body %>
+	|		</section>
+	|	</div>
+	| </script>
 		
 
 									
