--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,7 @@ html(lang="en")
 		!= css('raphaelicons')
 		!= css('http://releases.flowplayer.org/5.0.0/skin/minimalist.css')
 		!= js('jquery-1.7.2.min')
+		!= js('underscore-min')
 		!= js('http://releases.flowplayer.org/5.0.0/flowplayer.min.js')
 		!= js('app')
 
@@ -19,4 +20,4 @@ html(lang="en")
 			!=partial('menu')
 			!= body
 
-		!=partial('analytics')
+		
