Bug fix url linkin paginated results

--- a/views/blog/index.jade
+++ b/views/blog/index.jade
@@ -22,7 +22,7 @@ article#blog-main-page.blog
 	| <script type="text/template" class="template_post">
 	|	<div class="content">
 	| 		<section class="post">
-	| 			<h2> <a href="/teste123"><%- post.title %></a></h2>
+	| 			<h2> <a href="/<%= post.urlid %>"><%- post.title %></a></h2>
 	| 			<p class="meta"><%- post.date %></p>
 	|			<div class="tags-tab">
 	|				<ul id="tags" class="tags">
