--- a/views/blog/index.jade
+++ b/views/blog/index.jade
@@ -18,25 +18,13 @@ article#blog-main-page.blog
 						!= partial('post_tags', {post : post})
 
 						p!= md.parse(post.body)
-
-		| <script type="text/template" class="template_post">
-		|	<div class="content">
-		| 		<section class="post">
-		| 			<h2> <a href="/<%= post.urlid %>"><%- post.title %></a></h2>
-		| 			<p class="meta"><%- post.date %></p>
-		|			<div class="tags-tab">
-		|				<ul id="tags" class="tags">
-		|					<% _.each( post.tags.split(','), function(tag){ %>
-		|						<li><a href="/search?tag=<%= tag %>"><%= tag %></a></li>
-		|					<% }); %>
-		|				</ul>
-		|			</div>
-		|			<p></p>
-		|			<%= post.body %>
-		|		</section>
-		|	</div>
-		| </script>
-		
+			
+			- if (posts.length == 10)
+				div.nav_botton
+					div.old_posts_nav_link
+						a(href='/page/' + ( (!req.params.id) ? 2 : (parseInt(req.params.id) + 1) ))
+							img.icon(src='/img/back.png') 
+							span.label Posts antigos
 
 									
 								
