--- a/views/projects/index.jade
+++ b/views/projects/index.jade
@@ -23,10 +23,11 @@ article#projects
 						a(href='https://play.google.com/store/apps/details?id=br.com.guidefreitas')
 							img(src='/img/stores/google_play_normal.png', width='120', height='40')
 
+
 	div#project.content
 		section
 			div.project-image
-				img(src='/img/projects/quale/quale_home.png')
+				img(src='http://dl.dropbox.com/u/148071/blog/projects/joinville2.png')
 			div.project-description
 				h2 
 					a(href='/') Joinville
@@ -38,4 +39,38 @@ article#projects
 						a(href='http://windowsphone.com/s?appid=6885db7b-33a9-4a48-81c2-be9757bfafd8')
 							img(src='/img/stores/marketplace_normal.png', width='120', height='40')
 
-	
+	div#project.content
+		section
+			div.project-image
+				img(src='http://dl.dropbox.com/u/148071/blog/projects/jec1.png')
+			div.project-description
+				h2 
+					a(href='/') JEC - Joinville Esporte Clube
+
+				div.description 
+					Aplicativo sobre o clube JEC desenvolvido para um concurso da Nokia/Microsoft.
+
+					ul
+						li História
+						li Torféus
+						li Atletas
+						li Hino e Escudo
+
+				ul#stores
+					li
+						a(href='http://www.windowsphone.com/pt-br/apps/c31fd1be-14a3-4b7c-a4ab-69fb571b4e54')
+							img(src='/img/stores/marketplace_normal.png', width='120', height='40')
+
+	div#project.content
+		section
+			div.project-image
+				img(src='http://dl.dropbox.com/u/148071/blog/projects/hnewstab.png')
+			div.project-description
+				h2 
+					a(href='/') Hacker News Menu Tab
+
+				p.description Aplicativo para mostar as notícias do site Hacker News na barra de menu do Mac OSX
+
+				ul#stores
+					li
+						a(href='http://dl.dropbox.com/u/148071/HNewsTab/HNewsTab.zip') Download Here
