--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -98,6 +98,7 @@ html {
   -webkit-text-size-adjust: 100%;
   /* 3 */
   -ms-text-size-adjust: 100%;
+  font-family: "MuseoSans-300", arial, sans-serif;
 }
 
 
