--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,4 @@
+/*
 @font-face {
   font-family: 'MuseoSans-700';
   src: url("http://app.guidefreitas.com/fonts/221897_0_0.eot");
@@ -65,7 +66,90 @@
   font-weight: normal;
   font-style: normal;
 }
+*/
+@font-face {
+  font-family: 'MuseoSans-700';
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_0_0.eot");
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_0_0.eot?#iefix") format("embedded-opentype"), url("https://s3.amazonaws.com/coderwall-font/221897_0_0.woff") format("woff"), url("https://s3.amazonaws.com/coderwall-font/221897_0_0.ttf") format("truetype");
+}
 
+@font-face {
+  font-family: 'MuseoSans-300';
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_1_0.eot");
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_1_0.eot?#iefix") format("embedded-opentype"), url("https://s3.amazonaws.com/coderwall-font/221897_1_0.woff") format("woff"), url("https://s3.amazonaws.com/coderwall-font/221897_1_0.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'MuseoSans-900Italic';
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_2_0.eot");
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_2_0.eot?#iefix") format("embedded-opentype"), url("https://s3.amazonaws.com/coderwall-font/221897_2_0.woff") format("woff"), url("https://s3.amazonaws.com/coderwall-font/221897_2_0.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'MuseoSans-500';
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_3_0.eot");
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_3_0.eot?#iefix") format("embedded-opentype"), url("https://s3.amazonaws.com/coderwall-font/221897_3_0.woff") format("woff"), url("https://s3.amazonaws.com/coderwall-font/221897_3_0.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'MuseoSans-100';
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_4_0.eot");
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_4_0.eot?#iefix") format("embedded-opentype"), url("https://s3.amazonaws.com/coderwall-font/221897_4_0.woff") format("woff"), url("https://s3.amazonaws.com/coderwall-font/221897_4_0.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'MuseoSans-700Italic';
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_5_0.eot");
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_5_0.eot?#iefix") format("embedded-opentype"), url("https://s3.amazonaws.com/coderwall-font/221897_5_0.woff") format("woff"), url("https://s3.amazonaws.com/coderwall-font/221897_5_0.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'MuseoSans-300Italic';
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_6_0.eot");
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_6_0.eot?#iefix") format("embedded-opentype"), url("https://s3.amazonaws.com/coderwall-font/221897_6_0.woff") format("woff"), url("https://s3.amazonaws.com/coderwall-font/221897_6_0.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'MuseoSans-100Italic';
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_7_0.eot");
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_7_0.eot?#iefix") format("embedded-opentype"), url("https://s3.amazonaws.com/coderwall-font/221897_7_0.woff") format("woff"), url("https://s3.amazonaws.com/coderwall-font/221897_7_0.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'MuseoSans-500Italic';
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_8_0.eot");
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_8_0.eot?#iefix") format("embedded-opentype"), url("https://s3.amazonaws.com/coderwall-font/221897_8_0.woff") format("woff"), url("https://s3.amazonaws.com/coderwall-font/221897_8_0.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'MuseoSans-900';
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_9_0.eot");
+  src: url("https://s3.amazonaws.com/coderwall-font/221897_9_0.eot?#iefix") format("embedded-opentype"), url("https://s3.amazonaws.com/coderwall-font/221897_9_0.woff") format("woff"), url("https://s3.amazonaws.com/coderwall-font/221897_9_0.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'ChunkFiveRegular';
+  src: url("https://s3.amazonaws.com/coderwall-font/Chunkfive-webfont.eot");
+  src: url("https://s3.amazonaws.com/coderwall-font/Chunkfive-webfont.eot?#iefix") format("embedded-opentype"), url("https://s3.amazonaws.com/coderwall-font/Chunkfive-webfont.woff") format("woff"), url("https://s3.amazonaws.com/coderwall-font/Chunkfive-webfont.ttf") format("truetype"), url("https://s3.amazonaws.com/coderwall-font/Chunkfive-webfont.svg#ChunkFiveRegular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'nothing_you_could_doregular';
+  src: url("nothingyoucoulddo-webfont.eot");
+  src: url("nothingyoucoulddo-webfont.eot?#iefix") format("embedded-opentype"), url("nothingyoucoulddo-webfont.woff") format("woff"), url("nothingyoucoulddo-webfont.ttf") format("truetype"), url("nothingyoucoulddo-webfont.svg#nothing_you_could_doregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'nothing_you_could_do_boldbold';
+  src: url("nothingyoucoulddobold-webfont.eot");
+  src: url("nothingyoucoulddobold-webfont.eot?#iefix") format("embedded-opentype"), url("nothingyoucoulddobold-webfont.woff") format("woff"), url("nothingyoucoulddobold-webfont.ttf") format("truetype"), url("nothingyoucoulddobold-webfont.svg#nothing_you_could_do_boldbold") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 
 
 audio,
@@ -98,7 +182,6 @@ html {
   -webkit-text-size-adjust: 100%;
   /* 3 */
   -ms-text-size-adjust: 100%;
-  font-family: "MuseoSans-300", arial, sans-serif;
 }
 
 
