Feed url altered

--- a/views/menu.jade
+++ b/views/menu.jade
@@ -26,7 +26,7 @@ header.site-header
 			a#search-button(href="#") 
 				| <span class="icon">z</span>
 		li
-			a(href="/rss.xml") 
+			a(href="http://feeds.feedburner.com/guidefreitas/RTlL") 
 				| <span class="icon">Æ</span>
 
 				
