--- a/views/projects/index.jade
+++ b/views/projects/index.jade
@@ -8,7 +8,7 @@ article#projects
 				img(src='/img/projects/quale/quale_home.png')
 			div.project-description
 				h2 
-					a(href='/') Qualé Operadora
+					a(href='#') Qualé Operadora
 
 				p.description Descubra qual é a operadora de um número de celular.
 
@@ -30,7 +30,7 @@ article#projects
 				img(src='http://dl.dropbox.com/u/148071/blog/projects/joinville2.png')
 			div.project-description
 				h2 
-					a(href='/') Joinville
+					a(href='#') Joinville
 
 				p.description Aplicativo com informações turísticas desenvolvido para um concurso da Nokia/Microsoft.
 
@@ -45,7 +45,7 @@ article#projects
 				img(src='http://dl.dropbox.com/u/148071/blog/projects/jec1.png')
 			div.project-description
 				h2 
-					a(href='/') JEC - Joinville Esporte Clube
+					a(href='#') JEC - Joinville Esporte Clube
 
 				div.description 
 					Aplicativo sobre o clube JEC desenvolvido para um concurso da Nokia/Microsoft.
@@ -67,7 +67,7 @@ article#projects
 				img(src='http://dl.dropbox.com/u/148071/blog/projects/hnewstab.png')
 			div.project-description
 				h2 
-					a(href='/') Hacker News Menu Tab
+					a(href='#') Hacker News Menu Tab
 
 				p.description Aplicativo para mostar as notícias do site Hacker News na barra de menu do Mac OSX
 
