--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,12 @@ html(lang="en")
 		meta(charset='UTF-8')
 		meta(name="apple-mobile-web-app-capable", content="yes")
 		meta(http-equiv="X-UA-Compatible", content="chrome=1")
+		| <!--[if gt IE 7]>
 		!= css('app')
+		| <![endif]-->
+		| <!--[if lte IE 7]>
+		!= css('app_ie')
+		| <![endif]-->
 		!= css('raphaelicons')
 		!= css('http://releases.flowplayer.org/5.0.0/skin/minimalist.css')
 		!= js('jquery-1.7.2.min')
