--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,11 +5,10 @@ html(lang="en")
 		meta(charset='UTF-8')
 		meta(name="apple-mobile-web-app-capable", content="yes")
 		meta(http-equiv="X-UA-Compatible", content="chrome=1")
-		| <!--[if gte IE 9]>
 		!= css('app')
-		| <![endif]-->
 		| <!--[if lte IE 8]>
 		!= css('app_ie')
+		!= js('modernizr')
 		| <![endif]-->
 		!= css('raphaelicons')
 		!= css('http://releases.flowplayer.org/5.0.0/skin/minimalist.css')
