--- a/views/admin_layout.jade
+++ b/views/admin_layout.jade
@@ -5,6 +5,10 @@ html(lang="en")
 		meta(charset='UTF-8')
 		meta(name="apple-mobile-web-app-capable", content="yes")
 		!= css('app')
+		| <!--[if lte IE 8]>
+		!= css('app_ie')
+		!= js('modernizr')
+		| <![endif]-->
 		!= css('raphaelicons')
 		!= js('jquery-1.7.2.min')
 		!= js('app')
