--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,11 +3,11 @@ html(lang="en")
 	head
 		title =pageTitle
 		meta(charset='UTF-8')
-		meta(name="apple-mobile-web-app-capable", content="yes")
+		/meta(name="apple-mobile-web-app-capable", content="yes")
 		meta(http-equiv="X-UA-Compatible", content="chrome=1")
 		!= css('app')
-		| <!--[if lte IE 9]>
 		!= css('app_ie')
+		| <!--[if lte IE 9]>
 		!= js('html5shiv')
 		!= js('modernizr')
 		| <![endif]-->
@@ -20,7 +20,6 @@ html(lang="en")
 
 	body.site-page
 		img#canvasSource(src='/img/bg2.jpg', witdh="300", height="200")
-		canvas.blur#bgcanvas
 		div.wrapper
 			!=partial('menu')
 			!= body
