--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -457,9 +457,9 @@ site-page article.blog header h1{
   font-size: 1.6em;
   line-height: 1.4em;
   margin-bottom: 1.6em;
-  -webkit-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
+  /* -webkit-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
   -moz-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
-  box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
+  box-shadow: 0px 2px 10px rgba(0,0,0, 0.8); */
 }
 
 .content a{
