--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,10 +3,9 @@ html(lang="en")
 	head
 		title =pageTitle
 		meta(charset='UTF-8')
-		/meta(name="apple-mobile-web-app-capable", content="yes")
+		meta(name="apple-mobile-web-app-capable", content="yes")
 		meta(http-equiv="X-UA-Compatible", content="chrome=1")
 		!= css('app')
-		!= css('app_ie')
 		| <!--[if lte IE 9]>
 		!= js('html5shiv')
 		!= js('modernizr')
