--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html(lang="en")
 		meta(name="apple-mobile-web-app-capable", content="yes")
 		meta(http-equiv="X-UA-Compatible", content="chrome=1")
 		!= css('app')
+		!= css('app_ie')
 		| <!--[if lte IE 9]>
 		!= js('html5shiv')
 		!= js('modernizr')
@@ -19,6 +20,7 @@ html(lang="en")
 
 	body.site-page
 		img#canvasSource(src='/img/bg2.jpg', witdh="300", height="200")
+		canvas.blur#bgcanvas
 		div.wrapper
 			!=partial('menu')
 			!= body
