--- a/views/blog/show.jade
+++ b/views/blog/show.jade
@@ -1,9 +1,9 @@
-article.blog
+div.blog
 	header
 		!=partial('search_field')
 			
 	div.content
-		section.post
+		article.post
 			h2= post.title
 			p.meta
 				!= moment(post.date).format('LL')
