--- a/views/menu_admin.jade
+++ b/views/menu_admin.jade
@@ -1,15 +1,16 @@
 div
 	header.site-header
-		a.site-logo(href='/') Guilherme Defreitas
-		ul.menu
-			li 
-				a(href='/admin/posts') Posts  
-			li 
-				a(href='/media') Media
-			li 
-				a(href='/admin/messages') Mensagens 
-			li 
-				a(href='/logout') 
-					| <span class="icon">v</span>
+		nav
+			a.site-logo(href='/') Guilherme Defreitas
+			ul.menu
+				li 
+					a(href='/admin/posts') Posts  
+				li 
+					a(href='/media') Media
+				li 
+					a(href='/admin/messages') Mensagens 
+				li 
+					a(href='/logout') 
+						| <span class="icon">v</span>
 
 		
