--- a/views/blog/index.jade
+++ b/views/blog/index.jade
@@ -8,16 +8,16 @@ div#blog-main-page.blog
 				p Nenhum post encontrado
 		- else
 			- each post in posts
-				article.content
-					section.post
-						h2 
-							a(href='/'+post.urlid)!= post.title
-						p.meta
-							!= moment(post.date).format('LL')
-							
-						!= partial('post_tags', {post : post})
+				article.post
+					h2 
+						a(href='/'+post.urlid)!= post.title
+					p.meta
+						!= moment(post.date).format('LL')
+						
+					!= partial('post_tags', {post : post})
 
-						p!= md.parse(post.body)
+					div.article_content
+						!= md.parse(post.body)
 			
 			- if (posts.length == 10)
 				div.nav_botton
