--- a/views/blog/show.jade
+++ b/views/blog/show.jade
@@ -2,13 +2,14 @@ div.blog
 	header
 		!=partial('search_field')
 			
-	div.content
-		article.post
-			h2= post.title
-			p.meta
-				!= moment(post.date).format('LL')
-				a.author(href='/sobre')
-					img(src='/img/about/gui.png', width='68', height='68')
-			!= partial('post_tags', {post : post})
-			p!= md.parse(post.body)
+	article.post
+		h2= post.title
+		p.meta
+			!= moment(post.date).format('LL')
+			a.author(href='/sobre')
+				img(src='/img/about/gui.png', width='68', height='68')
+		!= partial('post_tags', {post : post})
+		div.article_content
+			!= md.parse(post.body)
+		
 
