--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,10 +12,13 @@ html(lang="en")
 		| <![endif]-->
 		!= css('raphaelicons')
 		!= css('http://releases.flowplayer.org/5.0.0/skin/minimalist.css')
+		!= css('prettify')
 		!= js('jquery-1.7.2.min')
 		!= js('underscore-min')
 		!= js('http://releases.flowplayer.org/5.0.0/flowplayer.min.js')
+		!= js('prettify')
 		!= js('app')
+
 
 	body.site-page
 		img#canvasSource(src='/img/bg2.jpg', witdh="300", height="200")
