--- a/views/menu.jade
+++ b/views/menu.jade
@@ -30,5 +30,5 @@ div
 				li
 					a(href="http://feeds.feedburner.com/guidefreitas/RTlL") 
 						| <span class="icon">Æ</span>
-
+		div.clear
 				
