--- a/views/projects/layout123.jade
+++ b/views/projects/layout123.jade
@@ -2,22 +2,21 @@
 html(lang="en")
 	head
 		title =pageTitle
-		meta(charset='UTF-8')
 		meta(name="apple-mobile-web-app-capable", content="yes")
-		!= css('app2')
-		!= css('prettify')
+		meta(http-equiv="X-UA-Compatible", content="chrome=1")
+		!= css('app')
 		| <!--[if lte IE 8]>
+		!= css('app_ie')
 		!= js('modernizr')
 		| <![endif]-->
 		!= css('raphaelicons')
 		!= js('jquery-1.7.2.min')
 		!= js('app')
-		!= js('prettify')
 	body.site-page
 		img#canvasSource(src='img/bg2.jpg', alt='Canvas Source')
 
 		canvas.blur#bgcanvas
 		div.wrapper
-			!=partial('menu_admin')
+			!=partial('menu')
 			
 			!= body
