--- a/assets/css/app2.css
+++ b/assets/css/app2.css
@@ -151,6 +151,7 @@ a {
 }
 
 
+
 fieldset{
   border: 0px;
 }
@@ -169,7 +170,10 @@ a:active {
 
 
 .site-page {
-	background: #4175c6;
+	margin: 0px;
+  padding: 0px;
+  background-image: url(/img/bgptr.jpg);
+  background-repeat: repeat;
 }
 
 
@@ -196,6 +200,7 @@ a:active {
 .site-header {
   margin: 54px 0 0;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
+  font-family: "MuseoSans-100", arial, sans-serif;
  
 }
 
@@ -375,6 +380,9 @@ site-page .blog header h1{
   font-size: 1.6em;
   line-height: 1.4em;
   margin-bottom: 1.6em;
+  -webkit-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
+  -moz-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
+  box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
 }
 
 .post h2 a{
