CSS fix post images

--- a/assets/css/app2.css
+++ b/assets/css/app2.css
@@ -978,6 +978,10 @@ article#projects .project-description #stores li{
   {
     padding-right: 13px;
   }
+
+  .post img{
+    max-width: 240px;
+  }
 }
 
 
