--- a/assets/css/app2.css
+++ b/assets/css/app2.css
@@ -982,6 +982,10 @@ article#projects .project-description #stores li{
   .post img{
     max-width: 240px;
   }
+
+  .post pre{
+    max-width: 290px;
+  }
 }
 
 
