--- a/views/projects/index.jade
+++ b/views/projects/index.jade
@@ -5,6 +5,23 @@ article#projects
 	div#project.content
 		section
 			div.project-image
+				img(src='/img/projects/magazine_luiza/magazine_luiza_home.png')
+			div.project-description
+				h2 
+					a(href='#') Black Friday Magazine Luiza
+
+				p.description Aplicativo utilizando reconhecimento facial e de sorriso desenvolvido em conjunto com a Easy Technology para a Magazine Luiza. O aplicativo detecta e oferece descontos para as pessoas que sorrirem.
+
+				h3 Tecnologias utilizadas
+				ul
+					li Node.js e Express.js
+					li HTML5 e Websockets
+					li OpenCV
+
+
+	div#project.content
+		section
+			div.project-image
 				img(src='/img/projects/quale/quale_home.png')
 			div.project-description
 				h2 
