--- a/views/projects/index.jade
+++ b/views/projects/index.jade
@@ -10,7 +10,7 @@ article#projects
 				h2 
 					a(href='#') Black Friday Magazine Luiza
 
-				p.description Aplicativo para Facebook utilizando reconhecimento facial e de sorriso desenvolvido em conjunto com a Easy Technology para a Magazine Luiza. O aplicativo detecta e oferece descontos para as pessoas que sorrirem.
+				p.description Aplicativo para Facebook utilizando reconhecimento facial e de sorriso desenvolvido em conjunto com a <a href="http://www.easycomtec.com">Easy Technology</a> para a Magazine Luiza. O aplicativo detecta e oferece descontos para as pessoas que sorrirem.
 
 				h3 Tecnologias utilizadas
 				ul
