Gooparties project added

--- a/views/projects/index.jade
+++ b/views/projects/index.jade
@@ -5,6 +5,25 @@ article#projects
 	div#project.content
 		section
 			div.project-image
+				img(src='/img/projects/gooparties/gooparties.png')
+			div.project-description
+				h2 
+					a(href='#') GooParties
+
+				p.description Aplicativo web desenvolvido em conjunto com a <a href="http://www.easycomtec.com">Easy Technology</a>. Descubra quais os eventos da semana que seus amigos irão. 
+
+				<a href="http://www.gooparties.com">Confira! Gooparties.com</a>
+
+				h3 Tecnologias utilizadas
+				ul
+					li Responsive Design
+					li HTML5
+					li Backbone.js
+					li Facebook API
+
+	div#project.content
+		section
+			div.project-image
 				img(src='/img/projects/magazine_luiza/magazine_luiza_home.png')
 			div.project-description
 				h2 
