--- a/assets/css/app2.css
+++ b/assets/css/app2.css
@@ -819,7 +819,7 @@ article#about #contact-form-area{
   padding: 50px 20px 20px;
   background: #F5F5F5;
   margin-top: -22px;
-  margin-left: 170px;
+  margin-left: 24%;
   margin-right: 190px;
   -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
   -moz-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
