--- a/assets/css/app2.css
+++ b/assets/css/app2.css
@@ -345,6 +345,10 @@ site-page .blog header h1{
   opacity: 0.5;
 }
 
+.post strong{
+  font-size: 1.2em;
+}
+
 .old_posts_nav_link{
   margin-bottom: 10px;
 }
